@@ -1,3 +1,8 @@
+2006-11-22  Jürg Billeter  <j@bitron.ch>
+
+	* vapi/glib-2.0.vala: add direct_hash and direct_equal
+	* tests/Makefile.am: distribute reference output
+
 2006-11-21  Jürg Billeter  <j@bitron.ch>
 
 	* vala/valaclass.vala, vala/valaenum.vala, vala/valafield.vala,
